syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.dinstone.grpc.authen.api";
option java_outer_classname = "AuthenProto";
import "google/protobuf/wrappers.proto";

package authen;

service AuthenService {
  rpc login (LoginRequest) returns (LoginResponse);
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
}